// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gap[Base] should render correctly  1`] = `
<div
  class="c-g3b8rb soui-gap-wrapper"
  style="margin-bottom: -8px; margin-right: -8px; width: 400px;"
>
  <div
    class="c-qchimb soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cq4fg10 soui-button-primary c-abf4z4 soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-qchimb soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cq4fg10 soui-button-primary c-abf4z4 soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-qchimb soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cq4fg10 soui-button-primary c-abf4z4 soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-qchimb soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cq4fg10 soui-button-primary c-abf4z4 soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-qchimb soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cq4fg10 soui-button-primary c-abf4z4 soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-qchimb soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cq4fg10 soui-button-primary c-abf4z4 soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-qchimb soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cq4fg10 soui-button-primary c-abf4z4 soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-qchimb soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cq4fg10 soui-button-primary c-abf4z4 soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-qchimb soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cq4fg10 soui-button-primary c-abf4z4 soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-qchimb soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cq4fg10 soui-button-primary c-abf4z4 soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about align 1`] = `
<div
  class="cuvzs0g soui-radio-group"
>
  <div
    class="ceo7z38 soui-radio-wrapper c875odf soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      flex-start
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      center
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      flex-end
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      baseline
    </span>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about custom 1`] = `
<div
  style="display: flex; align-items: center; margin-bottom: 16px;"
>
  <div
    style="width: 80px;"
  >
    column:
  </div>
  <div
    class="c7ubtly soui-slider-wrapper"
    style="flex: 1;"
  >
    <div
      class="c-l913oi soui-slider-track"
    >
      <div
        class="c-rukz6w soui-slider-track-inner"
        dir="ltr"
        style="left: 0%; right: 92%;"
      >
        <div
          class="c-446j6m soui-slider-indicator c-oxosmf soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="clrhw2r soui-slider-end-value c-l884os soui-slider-value"
          dir="ltr"
        >
          8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about vertical 1`] = `
<div
  class="c-g3b8rb soui-gap-wrapper"
  style="margin-bottom: -10px; margin-right: -8px; width: 400px; flex-direction: column;"
>
  <div
    class="c-qchimb soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cq4fg10 soui-button-primary c-abf4z4 soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-qchimb soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cq4fg10 soui-button-primary c-abf4z4 soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-qchimb soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cq4fg10 soui-button-primary c-abf4z4 soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-qchimb soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cq4fg10 soui-button-primary c-abf4z4 soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;
